deploy/overlays/prd/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-demo
spec:
  replicas: 2
